@@ -74,6 +74,7 @@ private:
 	short projectile;		// Projectile shape, or 0.
 	bool m_explodes;		// Projectile explodes on impact.
 	bool m_returns;			// Boomerang, magic axe.
+	bool m_no_blocking;		// Can move through walls.
 	short usecode;			// Usecode function, or 0.
 	unsigned char uses;		// 0 = hand-hand, 1,2 = throwable,
 					//   3 = missile-firing.
@@ -111,6 +112,10 @@ public:
 		{ return m_returns; }
 	void set_returns(bool tf)
 		{ m_returns = tf; }
+	bool no_blocking() const
+		{ return m_no_blocking; }
+	void set_no_blocking(bool tf)
+		{ m_no_blocking = tf; }
 	unsigned char get_uses() const
 		{ return uses; }
 	void set_uses(unsigned char u)
@@ -149,7 +154,7 @@ class Ammo_info
 	unsigned char damage;		// Extra damage points.
 	unsigned char powers;		// Same as for weapons.
 	unsigned char damage_type;	// Same as for weapons.
-//	unsigned char unknown[6];	// ??
+	bool m_no_blocking;		// Can move through walls.
 public:
 	friend class Shapes_vga_file;
 	Ammo_info()
@@ -171,6 +176,10 @@ public:
 		{ return powers; }
 	void set_powers(unsigned char p)
 		{ powers = p; }
+	bool no_blocking() const
+		{ return m_no_blocking; }
+	void set_no_blocking(bool tf)
+		{ m_no_blocking = tf; }
 	};
 
 /*
